@@ -16,7 +16,7 @@ except ImportError:
 import six
 
 from agate import Table, TableSet
-from agate.column_types import TextType, NumberType
+from agate.data_types import TextType, NumberType
 from agate.computations import Formula
 from agate.exceptions import ColumnDoesNotExistError
 
